# react-cpp-object-detection

./: README.md
client/: package-lock.json  package.json
client/src/: App.tsx
client/src/components/: Camera.tsx
server/: .clang-format  .gitignore  CMakeLists.txt  Makefile  vcpkg.json
server/include/: detector.h  ws_server.h
server/src/: detector.cpp  main.cpp  ws_server.cpp
